# python_full_stack_learning

./: README.md  arithmetic.py
Basics/: area.py  arithmetic.py  main.py  stremlit.py  test.py  type.py
Basics/ASCII_ART/: main.py
Basics/CSS/: first.html
Basics/Dictionary/: day1.py
Basics/File_Handeling/: file_hand.py  index.html
Basics/Function/: PositionalArg.py  day2.py  lambda.py  pas.py  port.py  queslambda.py  time.py
Basics/List/: Day1.py
Basics/Loops/: day1.py
Basics/Normal Claculation/: type_casting.py
Basics/PYPI/: main.py
Basics/Set/: day1.py
Basics/Tuple/: day1.py
Basics/async_await/: async_demo.py  sync.py
Basics/is _and_==/: day5.py
Basics/module/: calc.py  day4.py  dicto.py
Basics/none/: pyproject.toml  setup.cfg
Basics/none/src/amish_stringmanip_unique.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Basics/none/src/none1/: main.py  test.py
Flask/: flsk1.py
Flask/Database/: database.py  test.db
Flask/Day_16/: app.py  app1.py  request.py
Flask/Day_16/templates/: base.html  dashboard.html  dynamic.html  index.html  login.html  paisa.html  path.html
Flask/Day_17/: app.py  app1.py
Flask/Day_17/templates/: 404.html  500.html  base.html  base1.html  index.html
OOPS/: bank.py  emp.py  lec1.py  student.py  student2.py
OOPS/Abstraction/: animal.py  main.py  secure_locker_system.py
OOPS/Aggregation/: main.py
Server_Learning/: index.css  index.html  test.py
Server_Learning/dn/: index.html
Server_Learning/dn/port81/: nothing.html
Server_Learning/dn/test/: index.html  index1.html  script.js  (+1 more)
selenium/: sel.py
