[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amish-stringmanip-unique"
version = "0.1.0"
description = ""
authors = [
  { name="Amish", email="amishv20@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
