[metadata]
name = amish-stringmanip-unique
version = 0.0.2
author = Amish
description = A test python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
